# utility-scripts

./: .gitignore  README.md  README_run_colab.md  README_run_local.md  pyproject.toml  ruff.toml
src/utility_scripts/generate_car_parts_gemini_api/: __init__.py  main.ipynb  main.py
src/utility_scripts/move_folders/: copy_with_structure.py
src/utility_scripts/snp500_vs_job/: snp500_vs_job_chart.py
