[tool.poetry]
name = "utility-scripts"
version = "0.1.0"
description = "utility-scripts"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
google-generativeai = "^0.7.2"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
generate-images = "src.utility_scripts.generate_car_parts_gemini_api:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
